force-app/main/default/objects/RCC__c/RCC__c.object-meta.xml
<CustomObject>
    <label>RCC</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>RCC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RCCS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>