force-app/main/default/objects/RCC__c/fields/ActivityRestricted__c.field-meta.xml
<CustomField>
    <fullName>ActivityRestricted__c</fullName>
    <description>Nenhuma atividade praticada com produtos/serviços restritos pelas políticas da PagBrasil?</description>
    <label>Activity Restricted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RCC</valueSetName>
    </valueSet>
</CustomField>