force-app/main/default/objects/RCC__c/fields/CheckID__c.field-meta.xml
<CustomField>
    <fullName>CheckID__c</fullName>
    <description>Como foi realizado ID Check com o representante legal?</description>
    <label>CheckID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>