force-app/main/default/objects/RCC__c/fields/ContactDirectOrBusinessMail__c.field-meta.xml
<CustomField>
    <fullName>ContactDirectOrBusinessMail__c</fullName>
    <description>Temos contato direto ou foi informado no KYC o e-mail empresarial do representante legal?</description>
    <label>Contact Direct Or Business Mail</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>