force-app/main/default/objects/RCC__c/fields/DescriptionIsClear__c.field-meta.xml
<CustomField>
    <fullName>DescriptionIsClear__c</fullName>
    <label>Is the prod/serv description clear?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RCC</valueSetName>
    </valueSet>
</CustomField>