force-app/main/default/objects/RCC__c/fields/EditQuestions__c.field-meta.xml
<CustomField>
    <fullName>EditQuestions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Edit Questions</label>
    <type>Checkbox</type>
</CustomField>