force-app/main/default/objects/RCC__c/fields/Final_Score__c.field-meta.xml
<CustomField>
    <fullName>Final_Score__c</fullName>
    <label>Final Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>