force-app/main/default/objects/RCC__c/fields/ForecastSales__c.field-meta.xml
<CustomField>
    <fullName>ForecastSales__c</fullName>
    <description>Como será alcançado o forecast de vendas?</description>
    <label>How will the sales forecast be achieved?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>