force-app/main/default/objects/RCC__c/fields/MerchantDemand__c.field-meta.xml
<CustomField>
    <fullName>MerchantDemand__c</fullName>
    <description>Como a demanda do merchant é gerada?</description>
    <label>How is the merchant&apos;s demand generated?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>