force-app/main/default/objects/RCC__c/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <label>Opportunity Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>