force-app/main/default/objects/RCC__c/fields/PresenceMarket__c.field-meta.xml
<CustomField>
    <fullName>PresenceMarket__c</fullName>
    <description>O merchant já tem presença no mercado?</description>
    <label>Merchant has market presence?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RCC</valueSetName>
    </valueSet>
</CustomField>