force-app/main/default/objects/RCC__c/fields/QualityProduct__c.field-meta.xml
<CustomField>
    <fullName>QualityProduct__c</fullName>
    <description>Os produtos/serviços podem ser considerados de boa qualidade?</description>
    <label>Product Quality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RCC</valueSetName>
    </valueSet>
</CustomField>