force-app/main/default/objects/RCC__c/fields/RealisticForecast__c.field-meta.xml
<CustomField>
    <fullName>RealisticForecast__c</fullName>
    <description>O forecast de vendas previsto é realista para essa categoria de produto/serviço?</description>
    <label>Forecast realistic for product/service?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RCC</valueSetName>
    </valueSet>
</CustomField>