force-app/main/default/objects/RCC__c/fields/ReclameAqui_URL__c.field-meta.xml
<CustomField>
    <fullName>ReclameAqui_URL__c</fullName>
    <label>ReclameAqui URL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>