force-app/main/default/objects/RCC__c/fields/Rejected_Approval_Process__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Approval_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rejected Approval Process</label>
    <type>Checkbox</type>
</CustomField>