force-app/main/default/objects/RCC__c/fields/Reputation__c.field-meta.xml
<CustomField>
    <fullName>Reputation__c</fullName>
    <description>O merchant tem boa reputação no mercado?</description>
    <label>Reputation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RCC</valueSetName>
    </valueSet>
</CustomField>