force-app/main/default/objects/RCC__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <description>Somatório da avaliação de Risco</description>
    <label>Result</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>