force-app/main/default/objects/RCC__c/fields/Revision__c.field-meta.xml
<CustomField>
    <fullName>Revision__c</fullName>
    <description>Tempo para ser feito uma nova revisão.</description>
    <label>Revision</label>
    <length>30</length>
    <type>Text</type>
</CustomField>