force-app/main/default/objects/RCC__c/fields/RevisionFormula__c.field-meta.xml
<CustomField>
    <fullName>RevisionFormula__c</fullName>
    <formula>CASE(
Final_Risk__c,
&quot;Baixo&quot;, &quot;1 Year&quot;,
&quot;Médio&quot;, &quot;6 Months&quot;,
&quot;Alto&quot;, &quot;3 Months&quot;,
&quot;Extremo&quot;, &quot;1 Month&quot;,
&quot;Undefined&quot;
)</formula>
    <label>Revision</label>
    <type>Text</type>
</CustomField>