force-app/main/default/objects/RCC__c/fields/Risk__c.field-meta.xml
<CustomField>
    <fullName>Risk__c</fullName>
    <label>Suggested risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baixo</fullName>
                <label>Low</label>
            </value>
            <value>
                <fullName>Médio</fullName>
                <label>Medium</label>
            </value>
            <value>
                <fullName>Alto</fullName>
                <label>High</label>
            </value>
            <value>
                <fullName>Extremo</fullName>
                <label>Extreme</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>