force-app/main/default/objects/RCC__c/fields/Score_Formula__c.field-meta.xml
<CustomField>
    <fullName>Score_Formula__c</fullName>
    <formula>(
    SegmentRiskFormula__c
)
*
(
    CASE(DescriptionIsClear__c, &quot;Yes&quot;, 1, &quot;No&quot;, 5, &quot;In Parts&quot;, 2, 0) +
    CASE(ActivityRestricted__c, &quot;Yes&quot;, 5, &quot;No&quot;, 1, &quot;In Parts&quot;, 2, 0) +
    CASE(Reputation__c, &quot;Yes&quot;, 1, &quot;No&quot;, 5, &quot;In Parts&quot;, 2, 0) +
    CASE(QualityProduct__c, &quot;Yes&quot;, 1, &quot;No&quot;, 5, &quot;In Parts&quot;, 2, 0) +
				CASE(PresenceMarket__c, &quot;Yes&quot;, 1, &quot;No&quot;, 5, &quot;In Parts&quot;, 2, 0) +
    CASE(RealisticForecast__c, &quot;Yes&quot;, 1, &quot;No&quot;, 5, &quot;In Parts&quot;, 2, 0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>