force-app/main/default/objects/RCC__c/fields/Social_Media_URL__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_URL__c</fullName>
    <label>Social Media URL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>