force-app/main/default/objects/RCC__c/fields/SuggestedRiskFormula__c.field-meta.xml
<CustomField>
    <fullName>SuggestedRiskFormula__c</fullName>
    <formula>IF(
    SegmentRiskFormula__c &lt;= 6, 
    &quot;Low&quot;,
    IF(
        SegmentRiskFormula__c &lt;= 12,
        &quot;Medium&quot;,
        IF(
            SegmentRiskFormula__c &lt;= 75,
            &quot;High&quot;,
            &quot;Extreme&quot;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suggested risk</label>
    <type>Text</type>
</CustomField>