force-app/main/default/objects/RCC__c/fields/WhoNegotiated__c.field-meta.xml
<CustomField>
    <fullName>WhoNegotiated__c</fullName>
    <description>Com quem foi realizada a negociação?</description>
    <label>Who Negotiated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>