force-app/main/default/objects/RCC__c/listViews/CEO_RCC.listView-meta.xml
<ListView>
    <fullName>CEO_RCC</fullName>
    <filterScope>Queue</filterScope>
    <label>CEO</label>
    <queue>CEO</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>