force-app/main/default/objects/RCC__c/listViews/Director_RCC.listView-meta.xml
<ListView>
    <fullName>Director_RCC</fullName>
    <filterScope>Queue</filterScope>
    <label>Director</label>
    <queue>Director</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>